# postalcodes-ca

./: CA.tsv  Manifest.in  README.md  setup.cfg  test_postalcodes_ca.py  update_data.sh
.github/workflows/: run-tests.yml
postalcodes_ca/: __init__.py  import.py  postalcodes.db  settings.py
pypostalcode/: __init__.py  import.py
