[metadata]
name = postalcodes-ca
version = 0.0.8
author = Boris Verkhovskiy
author_email = boris.verk@gmail.com
description = Radius searches on Canadian FSA codes, location data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Canada, postal, code, distance, geonames
url = https://github.com/verhovsky/postalcodes-ca
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython


[options]
packages = find:
zip_safe = False
py_modules =
    postalcodes_ca
install_requires =
include_package_data = True
python_requires = >=3.7

[options.package_data]
* =
    *.db
